Update CSS to fix scrollbars and table width

--- a/style/style.css
+++ b/style/style.css
@@ -5,31 +5,7 @@ body {
   padding: 0;
   background-image: url(../images/pinstripes.png);
   background-repeat:repeat-x;
-  overflow-y: scroll;
-  overflow-x: hidden;
 }
-
-::-webkit-scrollbar {
-  width: 10px;
-}
- 
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 5px rgba(1,1,1,1); 
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-}
- 
-::-webkit-scrollbar-thumb {
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  background: #101010; 
-  -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.5); 
-}
-
-::-webkit-scrollbar-track-piece  {
-  background-color: #191919;
-  -webkit-border-radius: 0;
-} 
 
 h1, h2, h3, h4, h5, h6, p, ul, table{
   color: #d6d5d5;
@@ -72,7 +48,7 @@ a:hover, a:active, a:focus {
 .container {
 	width: 40%;
 	max-width: 1260px;
-	min-width: 780px;
+	min-width: 800px;
 	margin: 0 auto; 
 }
 
